--- a/404.html
+++ b/404.html
@@ -4,18 +4,19 @@
         <meta charset="utf-8">
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <meta property="og:locale" content="en-US">
-        <meta property="og:site_name" content="Abhinav's Webpage">
-        <meta property="og:title" content="Abhinav Bohra">
-        <meta property="og:description" content="Abhinav Bohra">
-        <meta property="og:url" content="https://abhinav-bohra.github.io">
-        <link rel="canonical" href="https://abhinav-bohra.github.io">
+        <meta property="og:site_name" content="Venkatesh's Webpage">
+        <meta property="og:title" content="Venkatesh Desai">
+        <meta property="og:description" content="Venkatesh Desai">
+        <meta property="og:url" content="https://venkydesai.github.io">
+        <link rel="canonical" href="https://venkydesai.github.io">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="cleartype" content="on">
-        <meta name="description" content="Abhinav Bohra - Computer Science & Engineering, IIT Kharagpur - Profile">
-        <meta name="keywords" content="Abhinav Bohra, Computer Science, Engineering, IIT Kharagpur">
-        <meta name="author" content="Abhinav Bohra">
+        <meta name="description" content="Venkatesh Desai - MS in Robotics (Computer Science conc.), Northeastern University">
+        <meta name="keywords" content="Venkatesh Desai, MS in Robotics (Computer Science conc.), Northeastern University">
+        <meta name="author" content="Venkatesh Desai">
+
     <!-- Google Analytics and MS Clarity -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-MNSPB7PT9W"></script>
         <script src="assets/js/google_analytics.js" type="text/javascript"></script>
@@ -26,7 +27,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/main.css">
         <link rel="stylesheet" href="assets/css/main.bundle.css">
-        <title>Abhinav Bohra</title>
+        <title>Venkatesh Desai</title>
     </head>
     <body>
         <div id="header"></div>
@@ -39,7 +40,7 @@
                     <header><h1 class="page__title" itemprop="headline">Page Not Found</h1></header>
                     <section class="page__content" itemprop="text">
                         <p>Sorry, but the page you were trying to view does not exist — perhaps you can try searching for it below.</p>
-                        <script type="text/javascript"> var GOOG_FIXURL_LANG = 'en'; var GOOG_FIXURL_SITE = 'https://abhinav-bohra.github.io' </script>
+                        <script type="text/javascript"> var GOOG_FIXURL_LANG = 'en'; var GOOG_FIXURL_SITE = 'https://venkydesai.github.io' </script>
                         <script type="text/javascript" src="../linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.html"> </script>
                     </section>
                     <footer class="page__meta"></footer>
