--- a/experience.html
+++ b/experience.html
@@ -74,7 +74,7 @@
                             <div class="media">
                                 <div class="media-left">
                                     <figure class="image is-48x48">
-                                        <img src="images/experiences/airindia.jpg" alt="AirIndia">
+                                        <img src="images/experiences/ai.jpg" alt="AirIndia">
                                     </figure>
                                 </div>
                                 <div class="media-content">
@@ -94,7 +94,7 @@
                                     <span class="tag">Python</span>
                                     <span class="tag">Numpy</span>
                                     <span class="tag">Machine Learning</span>
-                                    <!-- <span class="tag">Tensorflow</span>s -->
+                                    <!-- <span class="tag">Tensorflow</span> -->
                                 </div>
                             </div>
                         </div>
