index.html updated

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
         <meta charset="utf-8">
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <meta property="og:locale" content="en-US">
-        <meta property="og:site_name" content="Abhinav's Webpage">
-        <meta property="og:title" content="Abhinav Bohra">
-        <meta property="og:description" content="Abhinav Bohra">
-        <meta property="og:url" content="https://abhinav-bohra.github.io">
-        <link rel="canonical" href="https://abhinav-bohra.github.io">
-        <link rel="icon" type="image/png" href="images/icon_transparent.png">
+        <meta property="og:site_name" content="Venkatesh's Webpage">
+        <meta property="og:title" content="Venkatesh Desai Experience">
+        <meta property="og:description" content="Venkatesh Desai Experience">
+        <meta property="og:url" content="https://venkydesai.github.io/experience.html">
+        <link rel="canonical" href="https://venkydesai.github.io/experience.html">
+        <!-- <link rel="icon" type="image/png" href="images/icon_transparent.png"> -->
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="cleartype" content="on">
-        <meta name="description" content="Abhinav Bohra - Computer Science & Engineering, IIT Kharagpur - Profile">
-        <meta name="keywords" content="Abhinav Bohra, Computer Science, Engineering, IIT Kharagpur">
-        <meta name="author" content="Abhinav Bohra">
+        <meta name="description" content="Venkatesh Desai - MS in Robotics (Computer Science conc.), Northeastern University">
+        <meta name="keywords" content="Venkatesh Desai, MS in Robotics (Computer Science conc.), Northeastern University">
+        <meta name="author" content="Venkatesh Desai">
+
     <!-- Google Analytics and MS Clarity -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-MNSPB7PT9W"></script>
         <script src="assets/js/google_analytics.js" type="text/javascript"></script>
@@ -32,28 +33,28 @@
             {
                 "@context": "https://schema.org",
                 "@type": "Organization",
-                "name": "Abhinav Bohra",
-                "url": "https://abhinav-bohra.github.io",
-                "logo": "https://abhinav-bohra.github.io/images/jprofile.png",
-                "description": "Abhinav Bohra is a graduate from Indian Institute of Technology, Kharagpur with a Dual Degree (Bachelors and Masters) in Computer Science and Engineering and a Micro Specialization in Artificial Intelligence.",
+                "name": "Venkatesh Desai",
+                "url": "https://venkydesai.github.io",
+                "logo": "https://venkydesai.github.io/images/venky_profile.png",
+                "description": "Venkatesh Desai ... possesses an impressive range of work experiences across renowned companies. As an Applied Scientist Intern at Amazon, his contributions were instrumental in developing ML and DL algorithms to detect advanced robotic behaviors, safeguarding Amazon advertisers from fraud, and generating substantial revenue. During his time as a Research Intern at IBM Research AI, he conducted statistical analysis to improve predictive process models. At Adobe Inc., as a Research Intern in the Big Data Experience Lab, Abhinav created a machine learning-based framework for automated document generation from procedural videos, making multimedia more accessible. His work resulted in a publication at ACM IUI and a US Patent. His tenure as a Software Development Intern at Philips India Ltd. involved developing an ML-based software to predict software vulnerabilities and optimizing the testing process. Finally, his research internship at the Indian Institute of Management, Ahmedabad, involved implementing an unsupervised topic modeling algorithm for extracting relevant articles from news feeds. Abhinav's diverse experiences highlight his expertise in various domains and his ability to contribute effectively to different projects and organizations.",
                 "address": {
                     "@type": "PostalAddress",
-                    "addressLocality": "Ahmedabad",
-                    "addressRegion": "Gujarat",
-                    "postalCode": "380052",
-                    "addressCountry": "India"
+                    "addressLocality": "Boston",
+                    "addressRegion": "Massachusetts",
+                    "postalCode": "02120",
+                    "addressCountry": "USA"
                 },
                 "contactPoint": {
                     "@type": "ContactPoint",
-                    "telephone": " +91-97755-23111",
-                    "email": "abhinavbohra01@gmail.com",
+                    "telephone": " +1-857-2306277",
+                    "email": "venkateshdesai301@gmail.com",
                     "contactType": "Personal Profile"
                 },
                 "sameAs": [
                     "https://www.facebook.com/abhinavbohra01",
                     "https://www.twitter.com/abhinavbohra01",
-                    "https://www.linkedin.com/in/abhinav-bohra",
-                    "https://github.com/abhinav-bohra",
+                    "https://www.linkedin.com/in/venkateshdesai99",
+                    "https://github.com/venkydesai",
                     "https://scholar.google.com/citations?user=F51Ct9oAAAAJ&hl=en"
                 ]
             }
@@ -63,9 +64,9 @@
         <div id="header"></div>
         <div id="main" role="main">
             <div id="sidebar"></div>
-            <article class="page" itemscope itemtype="http://abhinav-bohra.github.io" style="padding-right: 4%; padding-left: 2%;">
-                <meta itemprop="headline" content="Abhinav Bohra - About me">
-                <meta itemprop="description" content="Abhinav Bohra - A graduate from Indian Institute of Technology, Kharagpur with a Dual Degree (Bachelors and Masters) in Computer Science and Engineering and a Micro Specialization in Artificial Intelligence.">
+            <article class="page" itemscope itemtype="http://venkydesai.github.io" style="padding-right: 4%; padding-left: 2%;">
+                <meta itemprop="headline" content="Venkatesh Desai - About me">
+                <meta itemprop="description" content="Venkatesh Desai - A candidate for Master's in Robotics (Computer Science) at Northeastern University.">
                 <div class="page__inner-wrap" style="text-align: justify; text-justify: inter-word;">
                     <h2 style="font-size: x-large;"><b>About Me</b></h2>
                     <section class="page__content" itemprop="text" style="font-size: 17.5px; margin-top: 1%;">
