--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@
           <strong>Follow:</strong>
         </li>
         <li>
-          <a href="https://github.com/abhinav-bohra">
+          <a href="https://github.com/venkydesai">
             <i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub </a>
         </li>
         <li>
@@ -15,7 +15,7 @@
             <i class="fa fa-fw fa-twitter" aria-hidden="true"></i> Twitter </a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/abhinav-bohra/">
+          <a href="https://www.linkedin.com/in/venkateshdesai99/">
             <i class="fa fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn </a>
         </li>
         <li>
