--- a/footer.html
+++ b/footer.html
@@ -24,7 +24,7 @@
         </li>
       </ul>
     </div>
-    <div class="page__footer-copyright">&copy; 2023 Abhinav Bohra. Powered by <a href="http://jekyllrb.com/" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>. </div>
+    <div class="page__footer-copyright">&copy; 2023 Venkatesh Desai. Powered by <a href="http://jekyllrb.com/" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>. </div>
   </footer>
 </div>
 <script src="assets/js/main.min.js"></script>
