--- a/sidebar.html
+++ b/sidebar.html
@@ -1,19 +1,19 @@
 <div class="sidebar sticky" style="margin-right: 0%;">
 	<div itemscope itemtype="http://schema.org/Person">
-		<div class="author__avatar"> <img src="images/jprofile.png" class="author__avatar" alt="Abhinav Bohra" style="padding-top: 0%; padding-bottom: 0%;"></div>
+		<div class="author__avatar"> <img src="images/venky_profile.png" class="author__avatar" alt="Venkatesh Desai" style="padding-top: 0%; padding-bottom: 0%;"></div>
 		<div class="author__content"><br>
-			<h2 class="author__name"><b>Abhinav Bohra</b></h2>
-			<p class="author__bio"  style="font-size: 15px;">Computer Science & Engineering, IIT Kharagpur</p>
+			<h2 class="author__name"><b>Venkatesh Desai</b></h2>
+			<p class="author__bio"  style="font-size: 15px;">MS in Robotics (Computer Science), Northeastern University</p>
 		</div>
 		<div class="author__urls-wrapper">
 			<ul class="author__urls social-icons">
-				<li><a href="mailto:abhinavbohra01@gmail.com">
+				<li><a href="mailto:venkateshdesai301@gmail.com">
 					<i class="fa fa-fw fa-envelope-square" aria-hidden="true" style="font-size: 20px;"></i>Email
 				</a></li>
-				<li><a href="https://www.linkedin.com/in/abhinav-bohra">
+				<li><a href="https://www.linkedin.com/in/venkateshdesai99">
 					<i class="fa fa-fw fa-linkedin-square" aria-hidden="true" style="font-size: 20px;"></i>LinkedIn
 				</a></li>
-				<li><a href="https://github.com/abhinav-bohra">
+				<li><a href="https://github.com/venkydesai">
 					<i class="fa fa-fw fa-github" aria-hidden="true" style="font-size: 20px;"></i>Github
 				</a></li>
 				<!-- li><a href="https://github.com/abhinav-bohra">
