--- a/case-studies.html
+++ b/case-studies.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <meta property="og:locale" content="en-US">
-        <meta property="og:site_name" content="Abhinav's Webpage">
-        <meta property="og:title" content="Abhinav Bohra Case Studies">
+        <meta property="og:site_name" content="Venkatesh's Webpage">
+        <meta property="og:title" content="Venkatesh Desai Case Studies">
         <meta property="og:description" content="Abhinav Bohra Case Studies">
         <meta property="og:url" content="https://abhinav-bohra.github.io/case-studies.html">
         <link rel="canonical" href="https://abhinav-bohra.github.io/case-studies.html">
