--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-<link rel="shortcut icon" href="images/icon_transparent.png">
+<!-- <link rel="shortcut icon" href="images/icon_transparent.png"> -->
 <div class="masthead">
    <div class="masthead__inner-wrap">
       <div class="masthead__menu">
