--- a/experience.html
+++ b/experience.html
@@ -199,14 +199,15 @@
                                     <span class="tag">Pytorch</span>
                                     <span class="tag">SLAM</span>
                                     <span class="tag">IoT</span>
+                                    <span class="tag">Machine Learning</span>
+                                    <span class="tag">Deep Learning</span>
                                     <span class="tag">Computer Vision</span>
-                                    <!-- <span class="tag">Scikit-Learn</span> -->
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="list__item" style="margin-top: 2%">
+                <!-- <div class="list__item" style="margin-top: 2%">
                     <div class="card">
                         <div class="card-content">
                             <div class="media">
@@ -238,7 +239,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div id="footer"></div>
