--- a/header.html
+++ b/header.html
@@ -11,9 +11,9 @@
                <li style="font-size: medium;"><a href="other-projects.html">Other Projects</a></li>
                <li style="font-size: medium;"><a href="case-studies.html">Case Studies</a></li>
                <li style="font-size: medium;"><a href="skills.html">Skills</a></li>
-               <li style="font-size: medium;"><a href="files/Abhinav_Bohra_Resume.pdf">Resume</a></li>
+               <li style="font-size: medium;"><a href="files/venkatesh_resume.pdf">Resume</a></li>
             </ul>
-         <div style="float: right; margin: -40px ; height:50px; width: 50px ;"> <img src="images/icon.png" alt="Abhinav Bohra Ab Logo"></img></div>
+         <!-- <div style="float: right; margin: -40px ; height:50px; width: 50px ;"> <img src="images/icon.png" alt="Abhinav Bohra Ab Logo"></img></div> -->
          </nav>
       </div>
    </div>
