--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
                <li style="font-size: medium;"><a href="skills.html">Skills</a></li>
                <li style="font-size: medium;"><a href="files/venkatesh_resume.pdf">Resume</a></li>
             </ul>
-         <div style="float: right; margin: -40px ; height:50px; width: 50px ;"> <img src="images/venky_icon.jpeg" alt="Abhinav Bohra Ab Logo"></img></div>
+         <div style="float: right; margin: -40px ; height:50px; width: 50px ;"> <img src="images/VD_logo_circular.png" alt="Abhinav Bohra Ab Logo"></img></div>
          </nav>
       </div>
    </div>
