--- a/skills.html
+++ b/skills.html
@@ -5,12 +5,12 @@
         <meta charset="utf-8">
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <meta property="og:locale" content="en-US">
-        <meta property="og:site_name" content="Abhinav's Webpage">
-        <meta property="og:title" content="Abhinav Bohra Skills">
-        <meta property="og:description" content="Abhinav Bohra Skills">
+        <meta property="og:site_name" content="Venkatesh's Webpage">
+        <meta property="og:title" content="Venkatesh Desai Skills">
+        <meta property="og:description" content="Venkatesh Desai Skills">
         <meta property="og:url" content="https://venkydesai.github.io/skills.html">
         <link rel="canonical" href="https://venkydesai.github.io/skills.html">
-        <!-- <link rel="icon" type="image/png" href="images/icon_transparent.png"> -->
+        <link rel="icon" type="image/png" href="images/VD_logo_circular.png">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
