--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:description" content="Venkatesh Desai Experience">
         <meta property="og:url" content="https://venkydesai.github.io/experience.html">
         <link rel="canonical" href="https://venkydesai.github.io/experience.html">
-        <!-- <link rel="icon" type="image/png" href="images/icon_transparent.png"> -->
+        <link rel="icon" type="image/png" href="images/VD_logo_circular.png">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
