--- a/ml-projects.html
+++ b/ml-projects.html
@@ -101,6 +101,36 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-6">
+                        <div class="list__item" style="margin-top: 2%;">
+                            <div class="card" style="height: 360px;">
+                                <div class="card-content">
+                                    <div class="media">
+                                        <div class="media-content">
+                                            <div class="row">
+                                                <div class="col-lg-9">
+                                                    <p class="title is-5">Credit Card Fraud Detection</p>
+                                                    <p class="subtitle is-6">.Implementation of privacy-preserving SVM with partial homomorphic encryption.</p>
+                                                </div>
+                                                <div class="col-lg-3">
+                                                    <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="content">
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <div class="tags">
+                                            <span class="tag">Python</span>
+                                            <span class="tag">Pandas</span>
+                                            <span class="tag">Numpy</span>
+                                            <span class="tag">Machine Learning</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>                                
             </div>
         </div>
