--- a/ml-projects.html
+++ b/ml-projects.html
@@ -119,7 +119,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/Spam.jpg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -149,7 +149,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/Influ.jpg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -179,7 +179,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/airbnb.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -209,7 +209,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/Heart_failure.jpg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -239,7 +239,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/movie.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -269,7 +269,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/book.jpg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -299,7 +299,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/k_means.png" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -329,7 +329,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/VAE.png" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -359,7 +359,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/VAE.png" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -389,7 +389,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/chatgpt.jpg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -418,7 +418,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/scan_matching.gif" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -447,7 +447,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/Generative-Adversarial-Network.png" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -476,7 +476,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/super_resol.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -505,7 +505,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/shadow_removal.png" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -534,7 +534,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/Rescue_robot.jpg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -564,7 +564,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/particle_filter.png" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -594,7 +594,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/A-star.png" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -624,7 +624,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/credit_card.jpeg" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/PRM.gif" style="width:50%; height:100px; border-radius: 10px; margin-bottom: 5%;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
