--- a/ml-projects.html
+++ b/ml-projects.html
@@ -624,7 +624,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/PRM.gif" style="width:80%; height:150px; border-radius: 10px; margin-bottom: 5%;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/PRM.gif" style="width:100%; height:160px; border-radius: 10px; margin-bottom: 5%; align-self: center;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
