--- a/ml-projects.html
+++ b/ml-projects.html
@@ -80,7 +80,7 @@
                                             <div class="row">
                                                 <div class="col-lg-9">
                                                     <p class="title is-5">Credit Card Fraud Detection</p>
-                                                    <p class="subtitle is-6">Developing a robust machine learning model to accurately detect and prevent credit card fraud, addressing the imperative need for advanced security measures in financial transactions to safeguard users and institutions from fraudulent activities.</p>
+                                                    <p class="subtitle is-6">Developed a robust machine learning model to accurately detect and prevent credit card fraud</p>
                                                 </div>
                                                 <div class="col-lg-3">
                                                     <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
