--- a/ml-projects.html
+++ b/ml-projects.html
@@ -110,7 +110,7 @@
                                             <div class="row">
                                                 <div class="col-lg-9">
                                                     <p class="title is-5">Email/ SMS Spam Classifier</p>
-                                                    <p class="subtitle is-6">.Implementation of privacy-preserving SVM with partial homomorphic encryption.</p>
+                                                    <p class="subtitle is-6"> Develop a robust Email/SMS Spam Classifier using ML to distinguish between legitimate and spam messages</p>
                                                 </div>
                                                 <div class="col-lg-3">
                                                     <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
@@ -140,7 +140,7 @@
                                             <div class="row">
                                                 <div class="col-lg-9">
                                                     <p class="title is-5">Can I be an influencer?</p>
-                                                    <p class="subtitle is-6">.Implementation of privacy-preserving SVM with partial homomorphic encryption.</p>
+                                                    <p class="subtitle is-6">Solves the challenge of predicting whether a photograph is likely to be popular and generate a significant number of downloads</p>
                                                 </div>
                                                 <div class="col-lg-3">
                                                     <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
@@ -170,7 +170,7 @@
                                             <div class="row">
                                                 <div class="col-lg-9">
                                                     <p class="title is-5">Airbnb house price prediction</p>
-                                                    <p class="subtitle is-6">.Implementation of privacy-preserving SVM with partial homomorphic encryption.</p>
+                                                    <p class="subtitle is-6">The model predicts rental house prices based on key features, empowering users to make informed decisions when listing or booking properties.</p>
                                                 </div>
                                                 <div class="col-lg-3">
                                                     <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
@@ -200,7 +200,7 @@
                                             <div class="row">
                                                 <div class="col-lg-9">
                                                     <p class="title is-5">Heart Disease Prediction</p>
-                                                    <p class="subtitle is-6">.Implementation of privacy-preserving SVM with partial homomorphic encryption.</p>
+                                                    <p class="subtitle is-6">This predictive model analyzes key health indicators to assess the likelihood of heart disease</p>
                                                 </div>
                                                 <div class="col-lg-3">
                                                     <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
@@ -230,7 +230,7 @@
                                             <div class="row">
                                                 <div class="col-lg-9">
                                                     <p class="title is-5">Movie Recommendation System</p>
-                                                    <p class="subtitle is-6">.Implementation of privacy-preserving SVM with partial homomorphic encryption.</p>
+                                                    <p class="subtitle is-6">This project tailors personalized movie suggestions based on user preferences</p>
                                                 </div>
                                                 <div class="col-lg-3">
                                                     <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
@@ -260,7 +260,7 @@
                                             <div class="row">
                                                 <div class="col-lg-9">
                                                     <p class="title is-5">Book Recommendation System</p>
-                                                    <p class="subtitle is-6">.Implementation of privacy-preserving SVM with partial homomorphic encryption.</p>
+                                                    <p class="subtitle is-6">This project analyzes user reading preferences and book characteristics to provide personalized recommendations</p>
                                                 </div>
                                                 <div class="col-lg-3">
                                                     <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
@@ -290,7 +290,7 @@
                                             <div class="row">
                                                 <div class="col-lg-9">
                                                     <p class="title is-5">Customer Segmentation using k-means clustering</p>
-                                                    <p class="subtitle is-6">.Implementation of privacy-preserving SVM with partial homomorphic encryption.</p>
+                                                    <p class="subtitle is-6">This system categorizes customers based on shared traits, enabling businesses to understand and target distinct consumer groups effectively</p>
                                                 </div>
                                                 <div class="col-lg-3">
                                                     <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
@@ -320,7 +320,7 @@
                                             <div class="row">
                                                 <div class="col-lg-9">
                                                     <p class="title is-5">Variational Autoencoders</p>
-                                                    <p class="subtitle is-6">.Implementation of privacy-preserving SVM with partial homomorphic encryption.</p>
+                                                    <p class="subtitle is-6">Buit Variational Autoencoder from scratch using Pytorch</p>
                                                 </div>
                                                 <div class="col-lg-3">
                                                     <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
@@ -350,7 +350,7 @@
                                             <div class="row">
                                                 <div class="col-lg-9">
                                                     <p class="title is-5">Automated Essay Scoring with Transformers</p>
-                                                    <p class="subtitle is-6">.Implementation of privacy-preserving SVM with partial homomorphic encryption.</p>
+                                                    <p class="subtitle is-6"></p>
                                                 </div>
                                                 <div class="col-lg-3">
                                                     <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
